<resources>
    <string name="app_name">MyStoryApplication</string>
    <string name="from">From : </string>
    <string name="icon_desc">dicoding icon</string>
    <string name="login_title">My Stories App</string>
    <string name="register_title">Register to My Stories App</string>

    <string name="label_username">Username</string>
    <string name="label_email">E-mail</string>

    <string name="label_password">Password</string>
    <string name="alert_password">Password harus 8 karakter atau lebih</string>

    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>

    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="description_hint">Description</string>
    <string name="add">Add</string>
    <string name="map">Maps</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps_story">MapsStoryActivity</string>

    <string name="retry">Coba lagi</string>
    <string name="add_your_location">Add Your Location</string>
</resources>
